--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -69,3 +69,30 @@ tr {
   padding: 0px;
   margin: 0px;
 }
+
+/* grid layout */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 5px 5px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "main main stats"
+    "main main map"
+    "messages messages messages";
+}
+
+.container div {
+  border: 1px black solid;
+  padding: 5px;
+}
+.main { grid-area: main; }
+.stats { grid-area: stats; }
+.map { 
+  grid-area: map; 
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.messages { grid-area: messages; }
