--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -74,16 +74,18 @@ tr {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 5px 5px;
   grid-auto-flow: row;
   grid-template-areas:
     "main main stats"
-    "main main map"
-    "messages messages messages";
+    "main main map";
+    /* "messages messages messages"; */
 }
 
-.container div {
+.container .main,
+.container .stats,
+.container .map {
   border: 1px black solid;
   padding: 5px;
 }
