--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -14,6 +14,11 @@ body {
   text-shadow: 0 0 12px #c8c8c88a;
 }
 
+p {
+  margin: 0px;
+  padding: 0px;
+}
+
 /*
 body::after {
   content: "";
@@ -105,3 +110,32 @@ tr {
 .stream { background: rgb(57, 167, 218); }
 .pool { background: rgb(9, 59, 116); }
 .void { background: rgb(209, 25, 255); }
+
+/* Drunk Text - Start 
+c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
+*/
+.drunk {
+	animation: drunkCam 10s infinite alternate;
+	color: white;
+}
+@keyframes drunkCam {
+	0%  { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	20% { filter: blur(1px); text-shadow: 8px 0 0 grey; }
+	24% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	26% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	28% { filter: blur(1px); text-shadow: 10px 0 0 grey; }
+	30% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	60% { filter: blur(1px); text-shadow: 5px 0 0 grey; }
+	62% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	65% { filter: blur(2px); text-shadow: 8px 0 0 grey; }
+	67% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+	80% { filter: blur(0px); text-shadow: 8px 0 0 grey; }
+	85% { filter: blur(2px); text-shadow: 10px 0 0 grey; }
+	88% { filter: blur(1px); text-shadow: 5px 0 0 grey; }
+	90% { filter: blur(0px); text-shadow: 0 0 0 grey; }
+}
+
+.event {
+  color: #ff00ff;
+}
+/* Drunk Text - End */
