--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -132,7 +132,7 @@ tr {
 .game-area {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr auto;
   gap: 15px 15px;
   grid-auto-flow: row;
   grid-template-areas:
