--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -423,5 +423,6 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
   background: #fff;
 }
 .visited {
-  background: rgba(7, 52, 61, 0.75);
+  /* background: rgba(7, 52, 61, 0.75); */
+  box-shadow: inset 0 0 0 99999px rgba(255,255,255,0.5);
 }
