--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -135,7 +135,7 @@ tr {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr auto;
-  gap: 15px 15px;
+  gap: 5px 5px; /*15px 15px;*/
   grid-auto-flow: row;
   grid-template-areas:
     "main main nav"
@@ -440,4 +440,8 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
 
 canvas {
   border-radius: 5px;
+}
+
+#story {
+  margin-top: 1em;
 }
