--- a/asciilike/styles/style.css
+++ b/asciilike/styles/style.css
@@ -91,7 +91,7 @@ tr {
   grid-template-areas:
     "main main stats"
     "main main map"; */
-  /* "messages messages messages"; */
+/* "messages messages messages"; */
 /* }
 
 .container .main,
@@ -101,9 +101,9 @@ tr {
   padding: 5px;
   background-image: radial-gradient(
     rgba(4, 87, 104, 0.75), */
-    /* black 120%  */
-    /*rgba(0, 150, 0, 0.75), black 120%*/
-  /* );
+/* black 120%  */
+/*rgba(0, 150, 0, 0.75), black 120%*/
+/* );
   border-radius: 5px;
   /* height: 100vh; */
 /*}
@@ -142,10 +142,11 @@ tr {
     "main main map"
     "messages messages messages";
   grid-area: 1 / 1 / 2 / 2;
-
 }
 
-.main { grid-area: main; }
+.main {
+  grid-area: main;
+}
 
 .nav {
   background-image: [img[assets/light-paper-fibers.png]];
@@ -164,13 +165,16 @@ tr {
   justify-items: center;
 }
 
-.main, .map, .messages {
-  background-image: radial-gradient(
-  rgba(4, 87, 104, 0.75), black 120%
-  );
+.main,
+.map,
+.messages {
+  background-image: radial-gradient(rgba(4, 87, 104, 0.75), black 120%);
 }
 
-.main, .map, .nav, .messages {
+.main,
+.map,
+.nav,
+.messages {
   border: 1px #333 solid;
   padding: 5px;
   border-radius: 10px;
@@ -183,17 +187,39 @@ tr {
   align-items: center;
 }
 
-.northwest { grid-area: northwest; }
-.north { grid-area: north; }
-.northeast { grid-area: northeast; }
-.east { grid-area: east; }
-.southeast { grid-area: southeast; }
-.south { grid-area: south; }
-.southwest { grid-area: southwest; }
-.west { grid-area: west; }
-.wait { grid-area: wait; }
-.map { grid-area: map; }
-.messages { grid-area: messages; }
+.northwest {
+  grid-area: northwest;
+}
+.north {
+  grid-area: north;
+}
+.northeast {
+  grid-area: northeast;
+}
+.east {
+  grid-area: east;
+}
+.southeast {
+  grid-area: southeast;
+}
+.south {
+  grid-area: south;
+}
+.southwest {
+  grid-area: southwest;
+}
+.west {
+  grid-area: west;
+}
+.wait {
+  grid-area: wait;
+}
+.map {
+  grid-area: map;
+}
+.messages {
+  grid-area: messages;
+}
 
 .nav .macro-button {
   /* background-color: transparent !important; */
@@ -226,8 +252,7 @@ tr {
 }
 
 .monster {
-  background: rgb(255,0,0);
-
+  background: rgb(255, 0, 0);
 }
 
 .down {
@@ -416,7 +441,7 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
   grid-gap: 2px;
 }
 .cell {
-   /* center the cell content */
+  /* center the cell content */
   justify-content: center;
   align-items: center;
   display: flex;
@@ -426,7 +451,7 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
 
 .map-cell {
   font-size: 8px;
-  font-family:'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   color: #fff;
 }
 
@@ -435,7 +460,7 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
 }
 .visited {
   /* background: rgba(7, 52, 61, 0.75); */
-  box-shadow: inset 0 0 0 99999px rgba(255,255,255,0.5);
+  box-shadow: inset 0 0 0 99999px rgba(255, 255, 255, 0.5);
 }
 
 canvas {
@@ -444,4 +469,67 @@ canvas {
 
 #story {
   margin-top: 1em;
+}
+
+/* responsive flexbox */
+/* https://codepen.io/thecodercoder/pen/YEVVvW */
+.parent {
+  /* background: #888; */
+  padding: 20px;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 18px;
+  line-height: normal;
+}
+.column {
+  padding: 10px;
+}
+.column p {
+  margin: 20px 0px;
+}
+.main {
+  /* background: #3054be; */
+}
+.sidebar {
+  /* background: #ee7000; */
+}
+
+@media only screen and (min-width: 641px) {
+  .parent {
+    display: flex;
+  }
+  .column {
+    flex: 1;
+  }
+}
+@media only screen and (min-width: 1025px) {
+  .main {
+    flex: 2;
+  }
+  .sidebar {
+    flex: 1;
+  }
+}
+
+/* https://projects.verou.me/bubbly/ */
+.speech-bubble {
+  position: relative;
+  background: #4c696b;
+  border-radius: 0.4em;
+  padding: 20px;
+  font-size: 18px;
+}
+
+.speech-bubble:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 1.281em solid transparent;
+  border-top-color: #4c696b;
+  border-bottom: 0;
+  margin-left: -1.281em;
+  margin-bottom: -1.281em;
 }
